--- a/public/assets/landingpage/css/style.css
+++ b/public/assets/landingpage/css/style.css
@@ -3338,7 +3338,7 @@ p {
     font-size: 1.3rem;
     font-weight: 400;
     letter-spacing: 0;
-    color: #222;
+    color: #fff;
     margin-left: 1rem;
     margin-top: -0.5rem;
     transition: all 0.3s;
