--- a/public/assets/css/client/app.css
+++ b/public/assets/css/client/app.css
@@ -7,7 +7,7 @@
     background-position: center !important;
     background-size: cover !important;
 }
-.product-media  a.product-image-hover {
+.product-media a.product-image-hover {
     height: 375px;
     background-position: center !important;
     background-size: cover !important;
@@ -51,6 +51,93 @@
 .invalid-feedback {
     font-size: 100%;
 }
-.btn-product:hover span, .btn-product:focus span {
+.btn-product:hover span,
+.btn-product:focus span {
     color: white !important;
+}
+.order-footer-action {
+    min-height: 100px;
+    background: #fffefb;
+    font-size: 2em;
+    line-height: 3.5em;
+}
+.order-card {
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
+        rgba(17, 17, 26, 0.1) 0px 0px 8px;
+}
+.btn-light {
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.09);
+}
+.cancel-warning-box {
+    background-color: #fffdf8;
+    border: 1px solid rgba(255, 174, 4, 0.3);
+    font-size: 1.5em;
+}
+.cancel-warning-box .icon-wrapper {
+    width: 20%;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffae04;
+}
+
+.cancel-warning-box .description > p {
+    padding: 1rem;
+    font-weight: 500;
+}
+.cancel-reason-group {
+    padding-top: 1rem;
+    padding-left: 3rem;
+}
+.cancel-reason-group .custom-radio {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+.cancel-reason-group .custom-radio label {
+    font-weight: 500;
+}
+
+.radio-container {
+    display: inline-block;
+}
+
+.radio-container input[type="radio"] {
+    display: none;
+}
+
+.radio-container > input[type="radio"] + label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 30px;
+    background-color: white;
+    border: 1px solid gray;
+    border-radius: 1px;
+    text-align: center;
+    vertical-align: middle;
+    position: relative;
+}
+
+.radio-container >input[type=radio] + label.img-contain-label {
+    width: 50px;
+    height: 50px;
+    background-size: contain !important;
+    background-position: center !important;
+}
+
+
+.radio-container > input[type="radio"]:checked + label {
+    border-color: #c96;
+    color: #c96;
+}
+.radio-container >input[type=radio]:checked + label.img-contain-label {
+    scale: 1.1;
+}
+.radio-container > input[type="radio"] + label:hover {
+    box-shadow: 0 0 10px lightgray;
+    color: #c96;
+    border-color: #c96;
 }
