--- a/public/assets/landingpage/css/style.css
+++ b/public/assets/landingpage/css/style.css
@@ -10478,7 +10478,7 @@ button:focus {
     position: relative;
     display: block;
     flex: 0 0 25%;
-    max-width: 25%;
+    /* max-width: 25%; */
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     margin-bottom: 1rem;
