--- a/public/assets/css/client/app.css
+++ b/public/assets/css/client/app.css
@@ -32,6 +32,14 @@
     background-size: cover !important;
     height: 380px;
 }
+.bg-overlay {
+    position: absolute;
+    background: #575757;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    opacity: 0.6;
+}
 .product-body .product-nav-thumbs a {
     width: 50px;
     height: 50px;
@@ -121,19 +129,18 @@
     position: relative;
 }
 
-.radio-container >input[type=radio] + label.img-contain-label {
+.radio-container > input[type="radio"] + label.img-contain-label {
     width: 50px;
     height: 50px;
     background-size: contain !important;
     background-position: center !important;
 }
 
-
 .radio-container > input[type="radio"]:checked + label {
     border-color: #c96;
     color: #c96;
 }
-.radio-container >input[type=radio]:checked + label.img-contain-label {
+.radio-container > input[type="radio"]:checked + label.img-contain-label {
     scale: 1.1;
 }
 .radio-container > input[type="radio"] + label:hover {
@@ -142,7 +149,7 @@
     border-color: #c96;
 }
 .product-detail-label {
-    color: rgba(0,0,0,.4);
+    color: rgba(0, 0, 0, 0.4);
     box-sizing: border-box;
     width: 12rem;
     padding-right: 0.75rem;
@@ -166,4 +173,7 @@
 }
 .product-detail-info-wrapper {
     line-height: 3.5em;
+}
+.show-detail-order {
+    cursor: pointer;
 }
