--- a/public/assets/css/admin/app.css
+++ b/public/assets/css/admin/app.css
@@ -260,63 +260,63 @@ div.dataTables_processing > div:last-child > div {
 }
 
 .timeline__row {
-	display: flex;
-	position: relative;
+    display: flex;
+    position: relative;
 }
 .timeline__row_icon {
-	width: 30px;
-	margin-right: 20px;
-	z-index: 1;
+    width: 30px;
+    margin-right: 20px;
+    z-index: 1;
 }
 .timeline__row_content {
-	width: calc(100% - 30px);
-	margin-bottom: 20px;
+    width: calc(100% - 30px);
+    margin-bottom: 20px;
 }
 .timeline__row_content .badge {
-	margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 .timeline__row_content_desc {
-	padding: 15px;
+    padding: 15px;
     padding-top: 0px;
 }
 .timeline__row:nth-last-child(1) .timeline__row_content {
-	border: none;
-	padding-bottom: 0;
-	margin-bottom: 10px;
+    border: none;
+    padding-bottom: 0;
+    margin-bottom: 10px;
 }
 .timeline__row:nth-last-child(1):before {
-	height: 0;
+    height: 0;
 }
 .timeline__row:before {
-	content: "";
-	position: absolute;
-	width: 1px;
-	height: 100%;
-	left: 15px;
-	background: #d5d5d5;
+    content: "";
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    left: 15px;
+    background: #d5d5d5;
 }
 
 .timeline .timeline-icon {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 30px;
-	width: 30px;
-	border-radius: 30px;
-	background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    width: 30px;
+    border-radius: 30px;
+    background: #fff;
     font-size: 1.3em;
 }
 .timeline .timeline-icon.success {
-	color: #4caf50;
-	border-color: #4caf50;
+    color: #4caf50;
+    border-color: #4caf50;
 }
 .timeline .timeline-icon.warning {
-	color: #ff9800;
-	border-color: #ff9800;
+    color: #ff9800;
+    border-color: #ff9800;
 }
 .timeline .timeline-icon.danger {
-	color: #f44336;
-	border-color: #f44336;
+    color: #f44336;
+    border-color: #f44336;
 }
 .log-info-wrapper {
     line-height: 1.5em;
@@ -340,11 +340,14 @@ div.dataTables_processing > div:last-child > div {
     width: 100%;
     height: 40px;
     border-bottom: 1px solid #e8e8e8;
-    background-color: hsla(0,0%,96%,.5) !important;
+    background-color: hsla(0, 0%, 96%, 0.5) !important;
 }
 #sidenav-collapse-main h6 {
     text-overflow: ellipsis;
     overflow: hidden;
     width: 70%;
     white-space: nowrap;
+}
+.sidenav-hidden {
+    transform: translateX(-17.125rem) !important;
 }
