--- a/public/assets/css/client/app.css
+++ b/public/assets/css/client/app.css
@@ -119,7 +119,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 60px;
+    min-width: 60px;
+    width: fit-content;
+    padding: 1rem;
     height: 30px;
     background-color: white;
     border: 1px solid gray;
