--- a/public/assets/css/argon-dashboard.css
+++ b/public/assets/css/argon-dashboard.css
@@ -50,7 +50,7 @@
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 103, 116, 142;
   --bs-body-bg-rgb: 255, 255, 255;
-  --bs-font-sans-serif: Helvetica Neue,Helvetica,RobotoRegular,Droid Sans,Arial,sans-serif;
+  --bs-font-sans-serif: Helvetica Neue,Helvetica,MontserratRegular,Droid Sans,Arial,sans-serif;
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: var(--bs-font-sans-serif);
@@ -19616,7 +19616,7 @@ textarea.form-control-lg {
   padding: 1.5rem;
 }
 .card .card-body {
-  font-family: Helvetica Neue,Helvetica,RobotoRegular,Droid Sans,Arial,sans-serif;
+  font-family: Helvetica Neue,Helvetica,MontserratRegular,Droid Sans,Arial,sans-serif;
   padding: 1.5rem;
 }
 .card.card-plain {
