--- a/public/assets/landingpage/sass/base/headers/_header-22.scss
+++ b/public/assets/landingpage/sass/base/headers/_header-22.scss
@@ -92,7 +92,7 @@
 
 
 .header-bottom .container .header-right {
-	
+
 	margin-left: -3rem;
 	margin-right: auto;
 
@@ -129,7 +129,7 @@
     padding-right: 3rem;
    	font-size: 1.4rem;
    	font-weight: 700;
-   	font-family: 'Roboto';
+   	font-family: 'Montserrat';
    	letter-spacing: -.01rem;
 }
 
@@ -147,7 +147,7 @@
 
 span.wishlist-count, span.cart-count {
 	font-size: 1.2rem;
-	font-family: 'Roboto';
+	font-family: 'Montserrat';
 	font-weight: 400;
 	color: #333;
 }
@@ -165,7 +165,7 @@ span.wishlist-count, span.cart-count {
 .category-dropdown  .dropdown-toggle {
 	 font-size: 1.4rem;
 	 font-weight: 700;
-	 font-family: 'Roboto';
+	 font-family: 'Montserrat';
 	 letter-spacing: -.01rem;
 	 color: #fff;
 }
@@ -251,7 +251,7 @@ span.wishlist-count, span.cart-count {
 	a {
 		font-size: 1.4rem;
 		font-weight: 400;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		letter-spacing: 0;
 		color: #fff;
 	}
@@ -305,7 +305,7 @@ span.wishlist-count, span.cart-count {
 	}
 }
 
-.compare-products {   
+.compare-products {
 	list-style: none;
     padding: 0;
     margin: 0;
@@ -334,7 +334,7 @@ span.wishlist-count, span.cart-count {
 .wishlist-link {
 	margin-left: 2.2rem;
 	color: #fff;
-	
+
 	.wishlist-count {
 		color: #000;
 	}
@@ -365,7 +365,7 @@ span.wishlist-count, span.cart-count {
 	select {
 		font-size: 1.4rem;
 		font-weight: 400;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		color: #777;
 	}
 
