--- a/public/assets/landingpage/sass/demos/demo-22.scss
+++ b/public/assets/landingpage/sass/demos/demo-22.scss
@@ -104,7 +104,7 @@ $body-text: #fff;
 
 		a {
 			margin-bottom: 0rem;
-			font-family: 'Roboto';
+			font-family: 'Montserrat';
 			background-color: $primary-color;
 			color: #333333;
 			font-size: 1.4rem;
@@ -120,7 +120,7 @@ $body-text: #fff;
 
 	.content {
 		text-transform: uppercase;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		margin-bottom: 3rem;
 		span {
 			color: $primary-color;
@@ -146,7 +146,7 @@ $body-text: #fff;
 
 			font-size: 1.4rem;
 			font-weight: 700;
-			font-family: 'Roboto';
+			font-family: 'Montserrat';
 			color: #fff;
 			border: .2rem solid $primary-color;
 			padding: 1rem 1.8rem;
@@ -187,7 +187,7 @@ $body-text: #fff;
 	.title {
 		h3 {
 			font-weight: 700;
-			font-family: 'Roboto';
+			font-family: 'Montserrat';
 			color: #fff;
 			font-size: 1.6rem;
 			letter-spacing: -.01rem;
@@ -195,11 +195,11 @@ $body-text: #fff;
 			margin-bottom: .3rem;
 
 		}
-		
+
 		h2 {
 			font-size: 2rem;
 			font-weight: 700;
-			font-family: 'Roboto';
+			font-family: 'Montserrat';
 			letter-spacing: -.01rem;
 			color: #fff;
 			text-transform: uppercase;
@@ -214,7 +214,7 @@ $body-text: #fff;
 
 		h3 {
 			font-size: 2rem;
-			font-family: 'Roboto';
+			font-family: 'Montserrat';
 			font-weight: 700;
 			letter-spacing: -.01rem;
 			text-transform: uppercase;
@@ -225,7 +225,7 @@ $body-text: #fff;
 		h4 {
 			font-size: 1.6rem;
 			font-weight: 700;
-			font-family: 'Roboto';
+			font-family: 'Montserrat';
 			letter-spacing: -.01rem;
 			color: #fff;
 			text-transform: uppercase;
@@ -239,7 +239,7 @@ $body-text: #fff;
 		text-transform: uppercase;
 		font-weight: 700;
 		letter-spacing: -.01rem;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 	}
 }
 
@@ -286,7 +286,7 @@ h2.title {
 	color: #333333;
 	font-size: 2rem;
 	font-weight: 700;
-	font-family: 'Roboto';
+	font-family: 'Montserrat';
 	letter-spacing: -.01rem;
 }
 
@@ -358,25 +358,25 @@ h2.title {
 			margin-bottom: 1rem;
 			span {
 				font-size: 1.5rem;
-				font-family: 'Roboto';
+				font-family: 'Montserrat';
 				font-weight: 700;
 				letter-spacing: -.01rem;
 				color: #ef837b;
 				text-transform: uppercase;
 				margin-bottom: 2rem;
 			}
-				
+
 		}
 		.product-title {
 			font-size: 2.6rem;
-			font-family: 'Roboto';
+			font-family: 'Montserrat';
 			font-weight: 700;
 			letter-spacing: -.01rem;
 			color: #333;
 			margin-bottom: 0;
 		}
 		.product-price {
-			font-family: 'Roboto';
+			font-family: 'Montserrat';
 		}
 		.action {
 			margin-top: 2.5rem;
@@ -387,7 +387,7 @@ h2.title {
 				color: $primary-color;
 				text-transform: uppercase;
 				font-size: 1.4rem;
-				font-family: 'Roboto';
+				font-family: 'Montserrat';
 				font-weight: 700;
 				letter-spacing: -.01rem;
 				border-radius: .3rem;
@@ -419,14 +419,14 @@ h2.title {
 	}
 
 	.product.product-3 .product-cat {
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		letter-spacing: -.01rem;
 		font-size: 1.3rem;
 	}
 
 	.product.product-3 .product-title {
 		margin-top: .5rem;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		letter-spacing: -.01rem;
 		font-weight: 700;
 		font-size: 1.5rem;
@@ -441,7 +441,7 @@ h2.title {
 		text-transform: uppercase;
 	}
 	.product.product-3 .product-price {
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		letter-spacing: -.01rem;
 		font-weight: 700;
 		font-size: 1.5rem;
@@ -466,7 +466,7 @@ h2.title {
     position: relative;
     border-bottom: none;
     font-size: 2rem;
-    font-family: 'Roboto';
+    font-family: 'Montserrat';
     letter-spacing: -.01rem;
     font-weight: 700;
     color: $primary-color;
@@ -490,7 +490,7 @@ h2.title {
 
 .featured-back .nav.nav-pills .nav-item.show,
 .featured-back .nav.nav-pills .nav-item {
-	
+
 	.nav-link {
 		padding: 1.1rem 4rem;
 
@@ -554,7 +554,7 @@ h2.title {
 	}
 
 	h3.title {
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		font-size: 2rem;
 		font-weight: 700;
 		color: #fff;
@@ -563,7 +563,7 @@ h2.title {
 		text-transform: none;
 	}
 	h4.content {
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		font-size: 1.6rem;
 		font-weight: 400;
 		color: #fff;
@@ -581,7 +581,7 @@ h2.title {
 
 		font-size: 1.4rem;
 		font-weight: 400;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		letter-spacing: 0;
 
 		padding: .7rem 2rem .6rem 2rem;
@@ -598,7 +598,7 @@ h2.title {
 		padding: .6rem 1rem .6rem 1rem;
 		text-transform: uppercase;
 		font-size: 1.4rem;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		font-weight: 700;
 		letter-spacing: -.01rem;
 		border-top-right-radius: .3rem;
@@ -640,7 +640,7 @@ h2.title {
 		left: 5rem;
 		padding: 0 5rem 1rem 0;
 	}
-	
+
 	img {
 		height: 100%;
 	}
@@ -679,7 +679,7 @@ h2.title {
 }
 
 .icon-box {
-    font-family: 'Roboto';
+    font-family: 'Montserrat';
 }
 
 .col-noPadding:not(:first-child) {
@@ -687,7 +687,7 @@ h2.title {
 
 
 .service {
-	
+
 	padding-top: 2.5rem;
 
 	.row > div {
@@ -696,11 +696,11 @@ h2.title {
 	}
 	.icon-box-content {
 		h3 {
-			font-family: 'Roboto';
+			font-family: 'Montserrat';
 			font-weight: 700;
 		}
 		p {
-			font-family: 'Roboto';
+			font-family: 'Montserrat';
 			font-weight: 400;
 		}
 	}
@@ -763,7 +763,7 @@ h2.title {
 	.product-cat {
 		font-weight: 400;
 		font-size: 1.3rem;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		color: #ccc;
 		text-transform: uppercase;
 		margin-top: 1rem;
@@ -842,7 +842,7 @@ h2.title {
 
 }
 .product-lg, .product.product-3 {
-	
+
 	.label-sale {
 		background-color: #ef837b;
 		text-transform: uppercase;
@@ -865,7 +865,7 @@ h2.title {
 		color: #fff;
 		margin-bottom: 1rem;
 		font-size: 1.4rem;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		font-weight: 700;
 	}
 }
@@ -896,7 +896,7 @@ h2.title {
 	    padding: .8rem 3.5rem;
 	    position: relative;
 	    font-size: 2rem;
-	    font-family: 'Roboto';
+	    font-family: 'Montserrat';
 	    font-weight: 700;
 	    letter-spacing: -.025rem;
 	    color: #333;
@@ -920,7 +920,7 @@ h2.title {
     .link {
     	padding: 1.1rem 3.5rem 1.1rem 4rem;
     	font-size: 1.4rem;
-    	font-family: 'Roboto';
+    	font-family: 'Montserrat';
     	font-weight: 700;
     	letter-spacing: -.01rem;
     	color: $primary-color;
@@ -940,7 +940,7 @@ h2.title {
 .popular {
 
 	padding-bottom: 1.5rem;
-	
+
 	hr {
 		margin-top: 3.5rem;
 	}
@@ -959,7 +959,7 @@ h2.title {
 	.product-cat {
 		font-size: 1.3rem;
 		font-weight: 400;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		color: #ccc;
 		text-transform: uppercase;
 		letter-spacing: -.01rem;
@@ -967,7 +967,7 @@ h2.title {
 	}
 	.product-title {
 		font-weight: 700;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		text-transform: uppercase;
 		letter-spacing: -.01rem;
 		margin-top: .5rem;
@@ -975,14 +975,14 @@ h2.title {
 	.product-price {
 		font-size: 1.5rem;
 		font-weight: 700;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		letter-spacing: -.01rem;
 		margin-top: .5rem;
 	}
 	.new-price {
 		font-size: 1.5rem;
 		font-weight: 700;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		color: #ef837b;
 		text-transform: uppercase;
 		letter-spacing: -.01rem;
@@ -990,7 +990,7 @@ h2.title {
 	.old-price {
 		font-size: 1.5rem;
 		font-weight: 700;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		color: #ccc;
 		text-transform: uppercase;
 		letter-spacing: -.01rem;
@@ -1064,7 +1064,7 @@ h2.title {
 			}
 		}
 	}
-	
+
 }
 
 @include mq('xl') {
@@ -1101,11 +1101,11 @@ h2.title {
 		    align-items: center;
 		    font-size: 2.4rem;
 		    font-weight: 700;
-		    font-family: 'Roboto';
+		    font-family: 'Montserrat';
 		}
 		h3 {
 			font-size: 5.4rem;
-			font-family: 'Roboto';
+			font-family: 'Montserrat';
 			font-weight: 700;
 			letter-spacing: -.01rem;
 			color: #fff;
@@ -1114,7 +1114,7 @@ h2.title {
 		}
 		sup {
 			font-size: 1.6rem;
-			font-family: 'Roboto';
+			font-family: 'Montserrat';
 			font-weight: 700;
 			letter-spacing: -.01rem;
 			margin-top: 2rem;
@@ -1174,7 +1174,7 @@ h2.title {
 
 	.entry-meta {
 		font-size: 1.3rem;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		font-weight: 400;
 		letter-spacing: 0;
 		color: #ccc;
@@ -1188,7 +1188,7 @@ h2.title {
 	}
 	.entry-title {
 		font-size: 2rem;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		font-weight: 700;
 		letter-spacing: -.025rem;
 		color: #333;
@@ -1201,14 +1201,14 @@ h2.title {
 	.entry-content a {
 		color: $primary-color;
 		font-size: 1.4rem;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		font-weight: 700;
 		letter-spacing: -.01rem;
 		text-transform: uppercase;
 		visibility: hidden;
 		opacity: 0;
 		transition: all .3s;
-		
+
 		&::after {
 			top: 45%;
 		}
@@ -1254,7 +1254,7 @@ footer {
 	.widget-title {
 		font-size: 1.6rem;
 		font-weight: 700;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		text-transform: uppercase;
 		letter-spacing: -.01rem;
 	}
@@ -1262,7 +1262,7 @@ footer {
 		li a {
 			font-size: 1.4rem;
 			font-weight: 400;
-			font-family: 'Roboto';
+			font-family: 'Montserrat';
 			letter-spacing: 0;
 			color: #777;
 		}
@@ -1271,7 +1271,7 @@ footer {
 		p {
 			font-size: 1.4rem;
 			font-weight: 400;
-			font-family: 'Roboto';
+			font-family: 'Montserrat';
 			letter-spacing: 0;
 			color: #777;
 			max-width: none;
@@ -1280,7 +1280,7 @@ footer {
 	.footer-copyright {
 		font-size: 1.4rem;
 		font-weight: 400;
-		font-family: 'Roboto';
+		font-family: 'Montserrat';
 		letter-spacing: 0;
 	}
 }
