--- a/public/assets/css/filepond/filepond.css
+++ b/public/assets/css/filepond/filepond.css
@@ -979,7 +979,7 @@
     line-height: normal;
 
     /* up uses default system font family */
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Montserrat, Helvetica, Arial, sans-serif,
         'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
     /* will increase font weight a bit on Safari */
