--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3261,6 +3261,7 @@ p {
   padding-bottom: 1.55rem;
   letter-spacing: 0.05em;
   color: #fff;
+  font-weight: bold;
 }
 .header-6 .header-bottom .menu > li > a:before {
   bottom: 1rem;
