--- a/public/assets/landingpage/css/style.css
+++ b/public/assets/landingpage/css/style.css
@@ -3268,6 +3268,7 @@ p {
     padding-bottom: 1.55rem;
     letter-spacing: 0.05em;
     color: #fff;
+    font-weight: bold;
 }
 .header-6 .header-bottom .menu > li > a:before {
     bottom: 1rem;
