--- a/public/assets/landingpage/css/demos/demo-6.css
+++ b/public/assets/landingpage/css/demos/demo-6.css
@@ -4,7 +4,7 @@
 }
 .title {
     font-weight: 600;
-    font-size: 2.6rem;
+    font-size: 1.2em;
     letter-spacing: -0.025em;
     text-transform: uppercase;
 }
