--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6737,7 +6737,7 @@ p {
 }
 .btn-product:hover span,
 .btn-product:focus span {
-  color: #c96;
+  color: #fff;
   box-shadow: 0 1px 0 0 #c96;
 }
 .product-action-dark {
