--- a/public/assets/landingpage/css/style.css
+++ b/public/assets/landingpage/css/style.css
@@ -649,6 +649,7 @@ blockquote.text-white cite span {
 .top-menu a {
     display: inline-flex;
     align-items: center;
+    font-size: 1.3em;
 }
 .top-menu i {
     font-size: 1.5rem;
@@ -5218,7 +5219,15 @@ p {
 }
 .heading .title {
     margin-bottom: 0;
+    width: fit-content;
+    margin: auto;
 }
+/* .heading .title:after {
+    content: "";
+    width: 100%;
+    height: 10px;
+    background: black;
+} */
 .heading.heading-center {
     text-align: center;
 }
